/*
 * CHANGELOG.
 */

10272006 - FLAC 1.1.3 breaks their API _again_, so we try to do the right
           thing at build time. (Thanks, Josh!).
05122006 - Patched to get mpglib compiling again (thanks, Sam!).
12172005 - Fixed gcc4 whining in playsound_simple.c.
12062005 - Trimmed a bunch of junk out of the build system, and now it works
           on Mac OS X again.
10122005 - Check for libmodplug headers in two possible places (thanks, Tyler!)
10012005 - Added playsound_simple.c.
05302005 - Backport from devtree: Fixed automake nonsense.
11122004 - Backport from devtree: fix .voc decoder crash on file open.
05082004 - Fixed "bootstrap" to work with MacOSX.
05072004 - Backed out some commits, converted repository to Subversion, and
           branched off to a 1.1.0 development tree. Changed MikMod URL...old
           one is now a porn site.  :(
10252003 - VOC decoder was broken. Now it isn't.
10142003 - Build system fix: acinclude.m4 had some word wrapping badness.
10122003 - Fixed "make dist" behaviour to not packaged generated docs, and
           made sure other files are always packaged, regardless of config.
           Upped version to 1.0.1.
10102003 - Changed some SDL_Error()s to __Sound_SetError() in new DLS code
           to fix linking issues.
10052003 - Fixed memory corruption when freeing DLS instruments,
           and bug when timidity is initialized multiple times (Thanks, Sam!).
09252003 - Sam Lantinga added support for DLS instruments to the MIDI decoder.
09132003 - Happy September. Added Speex (.spx) decoder.
08052003 - Fixed MIDI decoder on bigendian systems.
03102003 - Never actually created samplelist_mutex (Thanks, Glenn Maynard!).
01302003 - Patches to make SDL_sound more Visual C happy (Thanks, Eric!).
01122003 - Fix to smpeg.c's rewinding code (Thanks, Eric). Put Visual C 6
           project files in CVS, without external binaries (Thanks, Eric).
12212002 - Fixed ogg.c to decode a full buffer at a time instead of one ogg